update the casting test